--- a/README.adoc
+++ b/README.adoc
@@ -39,9 +39,12 @@ Our “server” service is called Say Hello. It will return a random greeting (
 
 In `src/main/java/hello`, create the file `SayHelloApplication.java`. It should look like this:
 
-say-hello/src/main/java/hello/SayHelloApplication.java
+`say-hello/src/main/java/hello/SayHelloApplication.java`
 
-link:complete/say-hello/src/main/java/hello/SayHelloApplication.java[]
+[source,java]
+----
+include::complete/say-hello/src/main/java/hello/SayHelloApplication.java[]
+----
 
 The @RestController annotation gives the same effect as if we were using @Controller and @ResponseBody together. It marks SayHelloApplication as a controller class (which is what @Controller does) and ensures that return values from the class’s @RequestMapping methods will be automatically converted appropriately from their original types and written directly to the response body (which is what @ResponseBody does). We have one @RequestMapping method for /greeting and then another for the root path /. (We’ll want that second method when we get to working with Ribbon in just a bit.)
 
