--- a/README.adoc
+++ b/README.adoc
@@ -1,5 +1,5 @@
 :spring_version: current
-:spring_boot_version: 2.4.2
+:spring_boot_version: 2.4.4
 :Controller: http://docs.spring.io/spring/docs/{spring_version}/javadoc-api/org/springframework/stereotype/Controller.html
 :DispatcherServlet: http://docs.spring.io/spring/docs/{spring_version}/javadoc-api/org/springframework/web/servlet/DispatcherServlet.html
 :SpringApplication: http://docs.spring.io/spring-boot/docs/{spring_boot_version}/api/org/springframework/boot/SpringApplication.html
@@ -66,14 +66,8 @@ you how to use Maven or Gradle.
 [[initial]]
 == Starting with Spring Initializr
 
-For all Spring applications, you should start with the https://start.spring.io[Spring
-Initializr]. The Initializr offers a fast way to pull in all the dependencies you need for
-an application and does a lot of the setup for you. For this guide, you need to run the
-Spring Initializr twice, once for the `Say Hello` project and once for the `User` project.
+If you use Maven for the `Say Hello` project, visit the https://start.spring.io/#!type=maven-project&language=java&platformVersion=2.4.4.RELEASE&packaging=jar&jvmVersion=1.8&groupId=com.example&artifactId=spring-cloud-loadbalancer-say-hello&name=spring-cloud-loadbalancer-say-hello&description=Demo%20project%20for%20Spring%20Boot&packageName=com.example.spring-cloud-loadbalancer-say-hello&dependencies=web[Spring Initializr] to generate a new project with the required dependency (Spring Web).
 
-The `Say Hello` project needs only the Spring Web dependency.
-You can get a Maven build file with the necessary dependencies for the `Say Hello` project
-directly from the https://start.spring.io/#!type=maven-project&language=java&platformVersion=2.4.2.RELEASE&packaging=jar&jvmVersion=11&groupId=com.example&artifactId=spring-cloud-loadbalancer-say-hello&name=spring-cloud-loadbalancer-say-hello&description=Demo%20project%20for%20Spring%20Boot&packageName=com.example.spring-cloud-loadbalancer-say-hello&dependencies=web[Spring Initializr].
 The following listing shows the `pom.xml` file that is created when you choose Maven:
 
 ====
@@ -83,8 +77,8 @@ include::initial/say-hello/pom.xml[]
 ----
 ====
 
-You can get a Gradle build file with the necessary dependencies for the `Say Hello` project
-directly from the https://start.spring.io/#!type=gradle-project&language=java&platformVersion=2.4.2.RELEASE&packaging=jar&jvmVersion=11&groupId=com.example&artifactId=spring-cloud-loadbalancer-say-hello&name=spring-cloud-loadbalancer-say-hello&description=Demo%20project%20for%20Spring%20Boot&packageName=com.example.spring-cloud-loadbalancer-say-hello&dependencies=web[Spring Initializr].
+If you use Gradle for the `Say Hello` project, visit the https://start.spring.io/#!type=gradle-project&language=java&platformVersion=2.4.4.RELEASE&packaging=jar&jvmVersion=1.8&groupId=com.example&artifactId=spring-cloud-loadbalancer-say-hello&name=spring-cloud-loadbalancer-say-hello&description=Demo%20project%20for%20Spring%20Boot&packageName=com.example.spring-cloud-loadbalancer-say-hello&dependencies=web[Spring Initializr] to generate a new project with the required dependency (Spring Web).
+
 The following listing shows the `build.gradle` file that is created when you choose Gradle:
 
 ====
@@ -94,9 +88,8 @@ include::initial/say-hello/build.gradle[]
 ----
 ====
 
-The `User` project needs the Cloud Loadbalancer and Spring Reactive Web dependencies.
-You can get a Maven build file with the necessary dependencies for the `User` project
-directly from the https://start.spring.io/#!type=maven-project&language=java&platformVersion=2.4.2.RELEASE&packaging=jar&jvmVersion=11&groupId=com.example&artifactId=spring-cloud-loadbalancer-user&name=spring-cloud-loadbalancer-user&description=Demo%20project%20for%20Spring%20Boot&packageName=com.example.spring-cloud-loadbalancer-user&dependencies=cloud-loadbalancer,webflux[Spring Initializr].
+If you use Maven for the `User` project, visit the https://start.spring.io/#!type=maven-project&language=java&platformVersion=2.4.4.RELEASE&packaging=jar&jvmVersion=1.8&groupId=com.example&artifactId=spring-cloud-loadbalancer-user&name=spring-cloud-loadbalancer-user&description=Demo%20project%20for%20Spring%20Boot&packageName=com.example.spring-cloud-loadbalancer-user&dependencies=cloud-loadbalancer,webflux[Spring Initializr] to generate a new project with the required dependencies (Cloud Loadbalancer and Spring Reactive Web).
+
 The following listing shows the `pom.xml` file that is created when you choose Maven:
 
 ====
@@ -106,8 +99,8 @@ include::initial/user/pom.xml[]
 ----
 ====
 
-You can get a Gradle build file with the necessary dependencies for the `User` project
-directly from the https://start.spring.io/#!type=gradle-project&language=java&platformVersion=2.4.2.RELEASE&packaging=jar&jvmVersion=11&groupId=com.example&artifactId=spring-cloud-loadbalancer-user&name=spring-cloud-loadbalancer-user&description=Demo%20project%20for%20Spring%20Boot&packageName=com.example.spring-cloud-loadbalancer-user&dependencies=cloud-loadbalancer,webflux[Spring Initializr].
+If you use Gradle for the `User` project, visit the https://start.spring.io/#!type=gradle-project&language=java&platformVersion=2.4.4.RELEASE&packaging=jar&jvmVersion=1.8&groupId=com.example&artifactId=spring-cloud-loadbalancer-user&name=spring-cloud-loadbalancer-user&description=Demo%20project%20for%20Spring%20Boot&packageName=com.example.spring-cloud-loadbalancer-user&dependencies=cloud-loadbalancer,webflux[Spring Initializr] to generate a new project with the required dependencies (Cloud Loadbalancer and Spring Reactive Web).
+
 The following listing shows the `build.gradle` file that is created when you choose Gradle:
 
 ====
@@ -116,6 +109,19 @@ The following listing shows the `build.gradle` file that is created when you cho
 include::initial/user/build.gradle[]
 ----
 ====
+
+=== Manual Initialization (optional)
+
+If you want to initialize the project manually rather than use the links shown earlier, follow the steps given below:
+
+. Navigate to https://start.spring.io.
+This service pulls in all the dependencies you need for an application and does most of the setup for you.
+. Choose either Gradle or Maven and the language you want to use. This guide assumes that you chose Java.
+. Click *Dependencies* and select *Spring Web* (for the `Say Hello` project) or *Cloud Loadbalancer* and *Spring Reactive Web* (for the `User` project).
+. Click *Generate*.
+. Download the resulting ZIP file, which is an archive of a web application that is configured with your choices.
+
+NOTE: If your IDE has the Spring Initializr integration, you can complete this process from your IDE.
 
 == Implement the "Say Hello" service
 
