Update "What You Will Need" Section
Use `The raw.githubusercontent.com` domain to serve unprocessed versions of 2 files, and eventually adding the 2nd option (To **skip the basics**) to the "What You Will Need" Section

--- a/README.adoc
+++ b/README.adoc
@@ -16,14 +16,12 @@ You will build a microservice application that uses Spring Cloud LoadBalancer to
 client-side load-balancing in calls to another microservice.
 
 
-== What You Will Need
+== What You Need
 
-* About 15 minutes
-* A favorite text editor or IDE
-* JDK 1.8 or later
-* Gradle 6+ or Maven 3.5+
-* You can also import the code straight into your IDE:
-* Spring Tool Suite (STS) or IntelliJ IDEA
+:java_version: 1.8
+include::https://raw.githubusercontent.com/spring-guides/getting-started-macros/main/prereq_editor_jdk_buildtools.adoc[]
+
+include::https://raw.githubusercontent.com/spring-guides/getting-started-macros/main/how_to_complete_this_guide.adoc[]
 
 [scratch]
 == Create a Root Project
