--- a/README.adoc
+++ b/README.adoc
@@ -1,5 +1,5 @@
 :spring_version: current
-:spring_boot_version: 2.4.4
+:spring_boot_version: 2.7.3
 :Controller: http://docs.spring.io/spring/docs/{spring_version}/javadoc-api/org/springframework/stereotype/Controller.html
 :DispatcherServlet: http://docs.spring.io/spring/docs/{spring_version}/javadoc-api/org/springframework/web/servlet/DispatcherServlet.html
 :SpringApplication: http://docs.spring.io/spring-boot/docs/{spring_boot_version}/api/org/springframework/boot/SpringApplication.html
@@ -31,7 +31,7 @@ client-side load-balancing in calls to another microservice.
 This guide walks through building two projects, one of which is a dependency to the other.
 Consequently, you need to create two child projects under a root project. First, create
 the build configuration at the top level. For Maven, you need a `pom.xml` with `<modules>`
-that list the subdirectories:
+that lists the subdirectories:
 
 ====
 [src,xml]
@@ -40,7 +40,7 @@ include::complete/pom.xml[]
 ----
 ====
 
-For Gradle, you need want a `settings.gradle` that includes the same directories:
+For Gradle, you need a `settings.gradle` that includes the same directories:
 
 ====
 [src,groovy]
@@ -66,7 +66,7 @@ you how to use Maven or Gradle.
 [[initial]]
 == Starting with Spring Initializr
 
-If you use Maven for the `Say Hello` project, visit the https://start.spring.io/#!type=maven-project&language=java&platformVersion=2.4.4.RELEASE&packaging=jar&jvmVersion=1.8&groupId=com.example&artifactId=spring-cloud-loadbalancer-say-hello&name=spring-cloud-loadbalancer-say-hello&description=Demo%20project%20for%20Spring%20Boot&packageName=com.example.spring-cloud-loadbalancer-say-hello&dependencies=web[Spring Initializr] to generate a new project with the required dependency (Spring Web).
+If you use Maven for the `Say Hello` project, visit the https://start.spring.io/#!type=maven-project&language=java&platformVersion={spring_boot_version}&packaging=jar&jvmVersion=1.8&groupId=com.example&artifactId=spring-cloud-loadbalancer-say-hello&name=spring-cloud-loadbalancer-say-hello&description=Demo%20project%20for%20Spring%20Boot&packageName=com.example.spring-cloud-loadbalancer-say-hello&dependencies=web[Spring Initializr] to generate a new project with the required dependency (Spring Web).
 
 The following listing shows the `pom.xml` file that is created when you choose Maven:
 
@@ -77,7 +77,7 @@ include::initial/say-hello/pom.xml[]
 ----
 ====
 
-If you use Gradle for the `Say Hello` project, visit the https://start.spring.io/#!type=gradle-project&language=java&platformVersion=2.4.4.RELEASE&packaging=jar&jvmVersion=1.8&groupId=com.example&artifactId=spring-cloud-loadbalancer-say-hello&name=spring-cloud-loadbalancer-say-hello&description=Demo%20project%20for%20Spring%20Boot&packageName=com.example.spring-cloud-loadbalancer-say-hello&dependencies=web[Spring Initializr] to generate a new project with the required dependency (Spring Web).
+If you use Gradle for the `Say Hello` project, visit the https://start.spring.io/#!type=gradle-project&language=java&platformVersion={spring_boot_version}&packaging=jar&jvmVersion=1.8&groupId=com.example&artifactId=spring-cloud-loadbalancer-say-hello&name=spring-cloud-loadbalancer-say-hello&description=Demo%20project%20for%20Spring%20Boot&packageName=com.example.spring-cloud-loadbalancer-say-hello&dependencies=web[Spring Initializr] to generate a new project with the required dependency (Spring Web).
 
 The following listing shows the `build.gradle` file that is created when you choose Gradle:
 
@@ -88,7 +88,7 @@ include::initial/say-hello/build.gradle[]
 ----
 ====
 
-If you use Maven for the `User` project, visit the https://start.spring.io/#!type=maven-project&language=java&platformVersion=2.4.4.RELEASE&packaging=jar&jvmVersion=1.8&groupId=com.example&artifactId=spring-cloud-loadbalancer-user&name=spring-cloud-loadbalancer-user&description=Demo%20project%20for%20Spring%20Boot&packageName=com.example.spring-cloud-loadbalancer-user&dependencies=cloud-loadbalancer,webflux[Spring Initializr] to generate a new project with the required dependencies (Cloud Loadbalancer and Spring Reactive Web).
+If you use Maven for the `User` project, visit the https://start.spring.io/#!type=maven-project&language=java&platformVersion={spring_boot_version}&packaging=jar&jvmVersion=1.8&groupId=com.example&artifactId=spring-cloud-loadbalancer-user&name=spring-cloud-loadbalancer-user&description=Demo%20project%20for%20Spring%20Boot&packageName=com.example.spring-cloud-loadbalancer-user&dependencies=cloud-loadbalancer,webflux[Spring Initializr] to generate a new project with the required dependencies (Cloud LoadBalancer and Spring Reactive Web).
 
 The following listing shows the `pom.xml` file that is created when you choose Maven:
 
@@ -99,7 +99,7 @@ include::initial/user/pom.xml[]
 ----
 ====
 
-If you use Gradle for the `User` project, visit the https://start.spring.io/#!type=gradle-project&language=java&platformVersion=2.4.4.RELEASE&packaging=jar&jvmVersion=1.8&groupId=com.example&artifactId=spring-cloud-loadbalancer-user&name=spring-cloud-loadbalancer-user&description=Demo%20project%20for%20Spring%20Boot&packageName=com.example.spring-cloud-loadbalancer-user&dependencies=cloud-loadbalancer,webflux[Spring Initializr] to generate a new project with the required dependencies (Cloud Loadbalancer and Spring Reactive Web).
+If you use Gradle for the `User` project, visit the https://start.spring.io/#!type=gradle-project&language=java&platformVersion={spring_boot_version}&packaging=jar&jvmVersion=1.8&groupId=com.example&artifactId=spring-cloud-loadbalancer-user&name=spring-cloud-loadbalancer-user&description=Demo%20project%20for%20Spring%20Boot&packageName=com.example.spring-cloud-loadbalancer-user&dependencies=cloud-loadbalancer,webflux[Spring Initializr] to generate a new project with the required dependencies (Cloud LoadBalancer and Spring Reactive Web).
 
 The following listing shows the `build.gradle` file that is created when you choose Gradle:
 
@@ -117,7 +117,7 @@ If you want to initialize the project manually rather than use the links shown e
 . Navigate to https://start.spring.io.
 This service pulls in all the dependencies you need for an application and does most of the setup for you.
 . Choose either Gradle or Maven and the language you want to use. This guide assumes that you chose Java.
-. Click *Dependencies* and select *Spring Web* (for the `Say Hello` project) or *Cloud Loadbalancer* and *Spring Reactive Web* (for the `User` project).
+. Click *Dependencies* and select *Spring Web* (for the `Say Hello` project) or *Cloud LoadBalancer* and *Spring Reactive Web* (for the `User` project).
 . Click *Generate*.
 . Download the resulting ZIP file, which is an archive of a web application that is configured with your choices.
 
@@ -139,7 +139,7 @@ include::complete/say-hello/src/main/java/hello/SayHelloApplication.java[]
 ----
 ====
 
-It is a simple `@RestController`, where we have one `@RequestMapping method` for the `/greeting` and another for the root path `/`.
+It is a simple `@RestController`, where we have one `@GetMapping` method for the `/greeting` and another for the root path `/`.
 
 We are going to run multiple instances of this application locally alongside a client service application.
 To get started:
@@ -186,13 +186,13 @@ include::complete/user/src/main/java/hello/WebClientConfig.java[]
 ----
 ====
 
-The configuration provides a `@LoadBalanced WebClient.Builder` instance, which we use when someone hits the `hi` endpoint of
+The configuration provides a `@LoadBalanced WebClient.Builder` instance, which we use when someone hits the `/hi` endpoint of
 `UserApplication.java`.
-Once the `hi` endpoint is hit, we use this builder to create a `WebClient` instance, which makes an HTTP `GET` request to the `Say Hello` service's URL and gives us the result as a `String`.
+Once the `/hi` endpoint is hit, we use this builder to create a `WebClient` instance, which makes an HTTP `GET` request to the `Say Hello` service's URL and gives us the result as a `String`.
 
-In `UserApplication.java`, we have also added a `/hello` endpoint that does the same action. However, rather than use the `@LoadBalanced` annotation, we use an `@Autowired` load-balancer exchange filter function (`lbFunction`), which we pass by using the `filter()` method to a `WebClient` instance that we programmatically build.
+In `UserApplication.java`, we have also added a `/hello` endpoint that does the same action. However, rather than use the `@LoadBalanced` annotation, we use an injected load-balancer exchange filter function (`lbFunction`), which we pass by using the `filter()` method to a `WebClient` instance that we programmatically build.
 
-TIP: Even though we set up the load-balanced `WebClient` instance slightly differently for the two endpoints, the end behavior for both is exactly the same.
+TIP: Even though we set up the load-balanced `WebClient` instances slightly differently for the two endpoints, the end behavior for both is exactly the same.
 Spring Cloud LoadBalancer is used to select an appropriate instance of the `Say Hello` service.
 
 Add the `spring.application.name` and `server.port` properties to `src/main/resources/application.properties` or `src/main/resources/application.yml`:
@@ -249,18 +249,7 @@ The most typical way is to use Spring Cloud LoadBalancer with service discovery.
 If you have any `DiscoveryClient` on your classpath, the default Spring Cloud LoadBalancer configuration uses it to check for service instances. As a result, you only choose from instances that are up and running.
 You can learn how to use `ServiceDiscovery` with this https://spring.io/guides/gs/service-registration-and-discovery/[guide].
 
-We also add an `application.yml` file with default `server.port` and `spring.application.name`.
-
-The following listing shows the contents of `user/src/main/resources/application.yml`:
-
-====
-[source,yaml]
-----
-include::complete/user/src/main/resources/application.yml[]
-----
-====
-
-== Testing the Loadbalancer
+== Testing the LoadBalancer
 
 The following listing shows how to run the `Say Hello` service with Gradle:
 
@@ -280,7 +269,7 @@ $ mvn spring-boot:run
 ----
 ====
 
-You can run other instances on ports 9092 and 9999
+You can run other instances on ports 9092 and 9999.
 To do so with Gradle, run the following command:
 
 ====
@@ -312,7 +301,7 @@ Your requests to the `User` service should result in calls to `Say Hello` being 
 
 == Summary
 
-Congratulations! You have just developed a Spring Loadbalancer application!
+Congratulations! You have just developed a Spring LoadBalancer application!
 
 
 
